crates/uitest/fixtures/ty_check/call.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/call.fe
---
error[8-0000]: type mismatch
  ┌─ call.fe:9:12
  │
9 │     add(x: false, y: 2)
  │            ^^^^^ expected `i32`, but `bool` is given

error[8-0000]: type mismatch
   ┌─ call.fe:17:26
   │
17 │     make_tuple<i32, u32>(false, 1)
   │                          ^^^^^ expected `i32`, but `bool` is given

error[8-0021]: expected function, found `u32`
   ┌─ call.fe:22:5
   │
22 │     x(100)
   │     ^ call expression requires function; `u32` is not callable

error[8-0024]: argument label mismatch
  ┌─ call.fe:6:9
  │
1 │ pub fn add(x: i32, y: i32) -> i32 {
  │        --- function defined here
  ·
6 │     add(1, 2)
  │         ^ expected `x` label

error[8-0024]: argument label mismatch
  ┌─ call.fe:6:12
  │
1 │ pub fn add(x: i32, y: i32) -> i32 {
  │        --- function defined here
  ·
6 │     add(1, 2)
  │            ^ expected `y` label

error[8-0024]: argument label mismatch
  ┌─ call.fe:7:9
  │
1 │ pub fn add(x: i32, y: i32) -> i32 {
  │        --- function defined here
  ·
7 │     add(y: 1, x: 2)
  │         ^ expected `x` label, but `y` given

error[8-0024]: argument label mismatch
  ┌─ call.fe:7:15
  │
1 │ pub fn add(x: i32, y: i32) -> i32 {
  │        --- function defined here
  ·
7 │     add(y: 1, x: 2)
  │               ^ expected `y` label, but `x` given

error[8-0024]: argument label mismatch
  ┌─ call.fe:8:15
  │
1 │ pub fn add(x: i32, y: i32) -> i32 {
  │        --- function defined here
  ·
8 │     add(x: 1, z: 2)
  │               ^ expected `y` label, but `z` given
